--- a/TestingSite.Frontend/testing_site/src/components/pages/reports/test_report/TestReport.css
+++ b/TestingSite.Frontend/testing_site/src/components/pages/reports/test_report/TestReport.css
@@ -3,9 +3,14 @@
 }
 .question-stats{
     display: flex;
-    height: 30vh;
+    height: auto;
 }
 .grades-answers{
     display: flex;
     height: 40vh;
+}
+.center-container{
+    display:flex;
+    width:100vw;
+    padding-left:20px;
 }
